# Wimzee

./: CMakeLists.txt  Makefile  README.md  build.bat  build.sh  buildmac.sh  setup.bat  setup.sh  vcpkg.json  wimzee
assets/shaders/: basic.frag  basic.vert  basicLight.frag
include/audio/: AudioManager.h
include/core/: Application.h  Component.h  GameObject.h  RenderableObject.h  Window.h
include/graphics/: Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h
include/input/: Input.h
setup/: setup-dependencies-linux.sh  setup-dependencies-mac.sh  setup-dependencies-windows.ps1  setup-windows.ps1
src/: main.cpp
src/audio/: AudioManager.cpp
src/core/: Application.cpp  Component.cpp  GameObject.cpp  Window.cpp
src/graphics/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/input/: Input.cpp
